-bug: Removing graphs does not take advantage of bulk deletes
-bug: Fixed issue with multiple "U" results for a data input method with multiple output parameters
-bug: SNMP v3 use AuthNoPriv when privacy passphrase is empty
-bug: Fixed sql errors when using template and search filter on graph management
-bug: Delete Data Source multi fails to perform bulk deletes on Data Source items
-feature#0001519: Spine enhancement for parallel collection of data at device level
-feature#0001667: Get values of |host_*| variables in graph elements from data source
-feature#0001922: Reindex method "Index Count Changed" requires that OID_NUM_INDEXES is given for SNMP Data Queries
-feature#0001923: Implement counting for script (server) data queries just like OID_NUM_INDEXES
-feature#0001924: Allow for reindex method "Index Count Changed" to apply to script (server) queries as well
-feature#0001952: Ability to use input field of a script in graph title 
-feature: Make reindexing and repopulating the poller cache a lossless process
-feature: Change default font sizes

0.8.7g
-bug: RRDTool 1.4.x not recognized during installation
-bug: Implement windows-aware shell escaping
-bug: Fixed multiple cross site scripting vulnerabilities reported by Tomas Hoger of the Red Hat Security Response Team
-bug#0001292: Over 8TByte Partition in Windows cant get correct data from snmp 
-bug#0001486: Unable to login after redirection to access denied page
-bug#0001516: "Show the page that user pointed their browser" does not seem to work
-bug#0001561: Over zelous HTML excaping on filter strings
-bug#0001575: LDAP-Authentifications does not work due to ldap_host being set incorrect
-bug#0001587: Feature from bug#0001271 breaks on large values 
-bug#0001607: Web Basic authentication does not work with fastcgi 
-bug#0001620: Max OID's max value reported incorrectly in Web UI
-bug#0001747: oid_suffix do not work correctly for input direction on data queries 